@@ -1,3 +1,8 @@
+2004-01-12  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/tc-mips.c (macro_build_jalr): When adding an R_MIPS_JALR
+	reloc, reserve space for the delay slot as well as the jalr itself.
+
 2004-01-09  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (do_vfp_reg2_from_sp2): Rename from do_vfp_sp_reg2.
